[xbrz-awt]  Multi-Release: MultiResolutionCachedImage for Java 9+
Java 8 compatible Multi-Release JAR:

https://maven.apache.org/plugins/maven-compiler-plugin/multirelease.html

Pattern 3: Single Project, Multi-Release Parent

https://www.russgold.net/sw/2018/04/easier-than-it-looks/

https://github.com/meterware/multirelease-parent

See also:

https://maven.apache.org/plugins/maven-javadoc-plugin/examples/aggregate.html#Aggregating_Javadocs_For_Modularized_projects